pk: Allow some error codes from offline updates

BUG: 443090